--- a/dada/extras/documentation/pod_source/features-UTF-8.pod
+++ b/dada/extras/documentation/pod_source/features-UTF-8.pod
@@ -16,7 +16,6 @@ That means:
 
 =back
 
-
 =head1 How To Have a Pleasant Experience
 
 It's heavily advised to keep everything in Dada Mail speaking C<UTF-8> without
@@ -132,10 +131,16 @@ has been added to the $DBI_PARAMS hashref.
 
 No explicit encoding/decoding is done in Dada Mail when saving/retrieving data. Hopefully, the drivers are UTF-8-aware enough. 
 
-=head1 Found a Problem? 
+=head1 Upgrading
 
+You are potentially going to have problems. 
 
+Its possible that, since List Settings were never decoded/encoded correctly in past versions, they'll show up the program (once you've upgrade) incorrectly. 
+The easiest thing to do is to edit the mistakes and resave the information. For most of the program, you're going to have to manually export the information and re-import it with the 
+correct encoding, sadly. Dada Mail will probably fail gracefully with old information, but it's possible that you'll see squiggly charaters, instead of what you want to see. There's nothing in Dada Mail 
+that will stop this from happening. If you experience it (from old information), we're not going to count it as a bug, but rather a known issue. 
 
+=head1 Problems?
 
 Please let us know via the Support Boards: 
 
