--- a/dada/extras/documentation/pod_source/changes_4_x.pod
+++ b/dada/extras/documentation/pod_source/changes_4_x.pod
@@ -6,6 +6,30 @@
 
 =head2 Changes 4.0.3
 
+=head3 Unicode/UTF-8 Work 
+
+We have worked very very hard to get Dada Mail working with UTF-8/Unicode. It was hard. 
+We think we did a pretty good job and you'll have an most amazing experience, 
+when comparing this version to any previous version of Dada Mail (ever), but 
+there may be tiny things still to work out. We need to know about them (don't be shy!) 
+
+=head4 SQL table schema changes!
+
+People who upgrade to 4.0.3 (and any version afterwards, until things change!) 
+should note that the MySQL and PostgreSQL Table Schemas have changed! 
+
+You may need to update your own tables, to support UTF-8 (if they aren't 
+already in that encoding) 
+
+=head4 See Also:
+
+If you're upgrading, please read over the updated UTF-8/Unicode FAQ: 
+
+http://dadamailproject.com/support/documentation/features-UTF-8.pod.html
+
+If you're doing a new install, there's nothing you need to know, Dada Mail should
+work well out of the box in re: to UTF-8/Unicode stuff. 
+
 =head3 Changes to Default List Settings
 
 We've changed a few of the default list settings, hopefully so that everyone 
@@ -310,7 +334,7 @@ L<http://dadamailproject.com/support/documentation/features-UTF-8.pod.html>
 
 Yup. Dada Mail can Tweet. More information: 
 
-L<http://dadamailproject.com/support/documentation/features-twitter_support.pod>
+L<http://dadamailproject.com/support/documentation/features-twitter_support.pod.html>
 
 =item * CKeditor Support (Experimental) 
 
